@@ -127,6 +127,7 @@ killjoe		Exit joe immediately without checking for modified buffers
 Files
 -----
 save		Save file
+savenow		Save immediately, unless file name is not known
 insf		Insert a file
 
 Formatting
