@@ -66,6 +66,8 @@
  -nomodcheck	Disable periodic checking of disk file newer than buffer
 		(this checking happens on save even with this option).
 
+ -nocurdir	Do not prompt with current directory
+
  -nobackups	If you don't want backup files to be created
 
  -break_links	Delete file before writing, to break hard links
@@ -1131,6 +1133,16 @@ cancel,eof	^V
 cancel,line	^T
 cancel,bop	^W
 cancel,eop	^O
+dnarw,eol	.kd		Go down
+dnarw,eol	^N
+dnarw,eol	^[ O B
+dnarw,eol	^[ [ B
+dnarw,eol	^# B
+uparw,eol	.ku		Go up
+uparw,eol	^# A
+uparw,eol	^P
+uparw,eol	^[ O A
+uparw,eol	^[ [ A
 
 :menu			Selection menus
 :inherit windows
