@@ -57,6 +57,7 @@
  -nolocks	If you don't want file locks to be used
  -nomodcheck	Disable periodic checking of disk file newer than buffer
 		(this checking happens on save even with this option).
+ -nocurdir	Do not prompt with current directory
  -nobackups	If you don't want backup files to be created
  -break_links	Delete file before writing, to break hard links
  -lightoff	Turn off highlighting after block copy or move
@@ -1032,8 +1033,8 @@ compile		^[ c
 compile		^[ C
 
 
-insf,"!date '+%I:%M %p'",rtn	^[ !
-insf,"!date '+%b %d, %Y'",rtn	^[ @
+insf," ",bol,deleol,"!date '+%I:%M %p'",rtn	^[ !
+insf," ",bol,deleol,"!date '+%b %d, %Y'",rtn	^[ @
  center		^[ c
 psh,prevword,nextword,nextword,markk,prevword,markb,setmark,":",
 prevword,nextword,blkmove,markk,prevword,markb,gomark,":",blkmove,nextword	^[ t
@@ -1219,6 +1220,16 @@ upslide		^W
 :inherit main
 abort		^C
 complete	^I
+dnarw,eol	.kd		Go down
+dnarw,eol	^N
+dnarw,eol	^[ O B
+dnarw,eol	^[ [ B
+dnarw,eol	^# B
+uparw,eol	.ku		Go up
+uparw,eol	^# A
+uparw,eol	^P
+uparw,eol	^[ O A
+uparw,eol	^[ [ A
 
 :menu			Selection menus
 :inherit windows
